# lab4_0

./: CMakeLists.txt
data/: unos.txt
include/: CMakeLists.txt  element.h  paket.h  silos.h  skladiste.h
src/: element.cpp  main.cpp  paket.cpp  silos.cpp  skladiste.cpp
