add_library(element STATIC ../src/element.cpp)
add_library(skladiste STATIC ../src/skladiste.cpp)
add_library(paket STATIC ../src/paket.cpp)
add_library(silos STATIC ../src/silos.cpp)
target_include_directories(element PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(skladiste PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(paket PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(silos PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(paket PUBLIC element)
target_link_libraries(silos PUBLIC element)
target_link_libraries(skladiste PUBLIC element paket silos)